# multi_lang_mix_build

./: .gitignore  CMakeLists.txt  README.md
examples/c_with_cpp_asm/: CMakeLists.txt  README.md  main.c
examples/py_with_asm_c_cpp/: README.md  demo.py  run_demo.sh
libs/asm/: CMakeLists.txt  README.md  math_ops.asm  math_ops_asm.h  test_main.c
libs/asm/bindings/python/: __init__.py  asm_math.c  asm_math.py  asm_math.pyx  setup.py
libs/asm/tests/: test_main.c
libs/c/: CMakeLists.txt  README.md  math_ops.c  math_ops.h  test_main.c
libs/c/bindings/python/: __init__.py  c_math.c  c_math.py  c_math.pyx  compare_bindings.py  setup.py
libs/c/include/c_math_ops/: math_ops.h
libs/c/src/: math_ops.c
libs/c/tests/: test_main.c
libs/cpp/: CMakeLists.txt  Calculator.cpp  README.md  c_wrapper.cpp  c_wrapper.h  test_c_wrapper.c  test_main.cpp
libs/cpp/bindings/python/: CMakeLists.txt  README.md  __init__.py  cpp_calculator.py  cpp_calculator_py.cpp  setup.py
libs/cpp/bindings/python/tests/: test_cpp_calculator.py
libs/cpp/include/cpp_calculator/: Calculator.h
libs/cpp/src/: Calculator.cpp  c_wrapper.cpp
libs/cpp/tests/: test_c_wrapper.c  test_main.cpp
